[package]
name = "typhoon-core"
version = "0.1.0"
edition = "2024"
description = "Typhoon — lightweight Rust/WASM frontend framework for beginners"
license = "MIT"
repository = "https://github.com/SamOnC0de/typhoon"
keywords = ["wasm", "frontend", "web", "framework", "ui"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "EventTarget",
    "HashChangeEvent",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "InputEvent",
    "Node",
    "Storage",
    "Text",
    "Window",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
typhoon-macro = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
