[package]
name = "typhoon-macro"
version = "0.1.0"
edition = "2021"
description = "Proc-macro crate for Typhoon framework - the tp! macro"
license = "MIT"
repository = "https://github.com/yourusername/typhoon"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
